# sea-orm-operations

./: README.md
src-tauri/: .env  Cargo.toml  Readme.md  db.sqlite  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: post.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20241014_113112_create_post_table.rs  m20241021_080046_create_post_table.rs
src-tauri/service/: Cargo.toml
src-tauri/service/src/: query.rs
src-tauri/src/: main.rs
